8270269: Desktop.browse method fails if earlier CoInitialize call as COINIT_MULTITHREADED